Fix index subscribe on mobile

--- a/src/components/index/speakers.scss
+++ b/src/components/index/speakers.scss
@@ -7,6 +7,6 @@
 
 .index-speakers-more {
   margin-top: 5em;
-  font-size: 32px;
   text-align: center;
+  margin: 0 var(--spacing-content);
 }
