--- a/src/components/subscribe.scss
+++ b/src/components/subscribe.scss
@@ -20,14 +20,14 @@
   line-height: 54px;
   flex: 1;
   box-sizing: border-box;
-  margin-right: 24px;
+  // margin-right: 24px;
   color: white;
   @include font(mono);
   font-weight: bold;
 
   &:focus {
     outline: 0;
-    border-color: var(--text-light);
+    border-color: var(--primary);
   }
 
   .subscribe-form--light & {
